# mkdocs-djot

./: .gitignore  Cargo.toml  README.md  README.zh.md  pyproject.toml
mkdocs_djot/: plugin.py
src/: lib.rs
